# codedays-rs

./: .env.example  Cargo.toml  README.md
.github/workflows/: grcov.yml  telegram.yml
migrations/2020-07-25-130921_create_kb/: down.sql  up.sql
migrations/2020-08-12-044323_create_kb/: mod.rs
src/: config.rs  db.rs  error.rs  main.rs  schema.rs
src/kb/: handlers.rs  models.rs  urls.rs
src/subscriber/: mod.rs  urls.rs  utils.rs
