[package]
name = "codedays-rs"
version = "0.1.0"
authors = ["qiwihui <qwh005007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "chrono"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
listenfd = "0.3"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
slog-envlogger = "2.2.0"
config = "0.10.1"
fernet="0.1.3"
base64="0.12.3"