[package]
name = "codedays-rs"
version = "0.1.0"
authors = ["qiwihui <qwh005007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "chrono"]}
barrel = { version="0.6.5", features=["pg"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
listenfd = "0.3"
config = "0.10.1"
fernet="0.1.3"
base64="0.12.3"
mailgun_v3="0.9.0"
validator = "0.10.1"
validator_derive = "0.10.1"
log = "0.4.11"
env_logger = "0.7.1"

[dev-dependencies]
